# aidata

./: .gitignore  README.md  vercel.json
backend/: main.py  pyproject.toml  requirements.txt
backend/sample_data/: customers.csv  order_details.csv
backend/services/: analytics.py  csv_parser.py  erp_parser.py  gemini_service.py  report_generator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: CsvPreview.tsx  PageHeader.tsx  ServiceFlow.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/lib/: api.ts  csvParser.ts
frontend/src/pages/: DashboardPage.tsx  DataInputPage.tsx  RawDataPage.tsx  ReportPage.tsx
frontend/src/styles/: design.css
frontend/src/validation/: erpSchemas.ts
sample_data/: erp_sample.csv  orders.csv  products.csv
