[project]
name = "aidata-backend"
version = "2.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "pandas==2.2.3",
  "numpy==2.2.1",
  "google-genai==1.12.0",
  "python-dotenv==1.0.1",
  "matplotlib==3.10.0",
  "python-docx==1.1.2",
  "reportlab==4.2.5",
  "koreanize-matplotlib==0.1.1",
]
